--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,7 +50,6 @@
                 android:clickable="true"
                 android:gravity="center"
                 android:onClick="onBingoFieldClick"
-                android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
                 android:hyphenationFrequency="full"
                 app:coordX="0"
@@ -66,7 +65,6 @@
                 android:clickable="true"
                 android:gravity="center"
                 android:onClick="onBingoFieldClick"
-                android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
                 android:hyphenationFrequency="full"
                 app:coordX="1"
@@ -82,7 +80,6 @@
                 android:clickable="true"
                 android:gravity="center"
                 android:onClick="onBingoFieldClick"
-                android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
                 android:hyphenationFrequency="full"
                 app:coordX="2"
@@ -98,7 +95,6 @@
                 android:clickable="true"
                 android:gravity="center"
                 android:onClick="onBingoFieldClick"
-                android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
                 android:hyphenationFrequency="full"
                 app:coordX="3"
@@ -114,7 +110,6 @@
                 android:clickable="true"
                 android:gravity="center"
                 android:onClick="onBingoFieldClick"
-                android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
                 android:hyphenationFrequency="full"
                 app:coordX="4"
@@ -139,7 +134,6 @@
                 android:clickable="true"
                 android:gravity="center"
                 android:onClick="onBingoFieldClick"
-                android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
                 android:hyphenationFrequency="full"
                 app:coordX="0"
@@ -155,7 +149,6 @@
                 android:clickable="true"
                 android:gravity="center"
                 android:onClick="onBingoFieldClick"
-                android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
                 android:hyphenationFrequency="full"
                 app:coordX="1"
@@ -171,7 +164,6 @@
                 android:clickable="true"
                 android:gravity="center"
                 android:onClick="onBingoFieldClick"
-                android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
                 android:hyphenationFrequency="full"
                 app:coordX="2"
@@ -187,7 +179,6 @@
                 android:clickable="true"
                 android:gravity="center"
                 android:onClick="onBingoFieldClick"
-                android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
                 android:hyphenationFrequency="full"
                 app:coordX="3"
@@ -203,7 +194,6 @@
                 android:clickable="true"
                 android:gravity="center"
                 android:onClick="onBingoFieldClick"
-                android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
                 android:hyphenationFrequency="full"
                 app:coordX="4"
@@ -228,7 +218,6 @@
                 android:clickable="true"
                 android:gravity="center"
                 android:onClick="onBingoFieldClick"
-                android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
                 android:hyphenationFrequency="full"
                 app:coordX="0"
@@ -244,7 +233,6 @@
                 android:clickable="true"
                 android:gravity="center"
                 android:onClick="onBingoFieldClick"
-                android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
                 android:hyphenationFrequency="full"
                 app:coordX="1"
@@ -258,7 +246,7 @@
                 android:layout_weight="1"
                 android:background="#666"
                 android:gravity="center"
-                android:text="Free Space"
+                android:text="@string/free_space_text"
                 android:textColor="@android:color/primary_text_dark" />
 
             <de.int80.gothbingo.BingoFieldView
@@ -271,7 +259,6 @@
                 android:clickable="true"
                 android:gravity="center"
                 android:onClick="onBingoFieldClick"
-                android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
                 android:hyphenationFrequency="full"
                 app:coordX="3"
@@ -287,7 +274,6 @@
                 android:clickable="true"
                 android:gravity="center"
                 android:onClick="onBingoFieldClick"
-                android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
                 android:hyphenationFrequency="full"
                 app:coordX="4"
@@ -312,7 +298,6 @@
                 android:clickable="true"
                 android:gravity="center"
                 android:onClick="onBingoFieldClick"
-                android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
                 android:hyphenationFrequency="full"
                 app:coordX="0"
@@ -328,7 +313,6 @@
                 android:clickable="true"
                 android:gravity="center"
                 android:onClick="onBingoFieldClick"
-                android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
                 android:hyphenationFrequency="full"
                 app:coordX="1"
@@ -344,7 +328,6 @@
                 android:clickable="true"
                 android:gravity="center"
                 android:onClick="onBingoFieldClick"
-                android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
                 android:hyphenationFrequency="full"
                 app:coordX="2"
@@ -360,7 +343,6 @@
                 android:clickable="true"
                 android:gravity="center"
                 android:onClick="onBingoFieldClick"
-                android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
                 android:hyphenationFrequency="full"
                 app:coordX="3"
@@ -376,7 +358,6 @@
                 android:clickable="true"
                 android:gravity="center"
                 android:onClick="onBingoFieldClick"
-                android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
                 android:hyphenationFrequency="full"
                 app:coordX="4"
@@ -401,7 +382,6 @@
                 android:clickable="true"
                 android:gravity="center"
                 android:onClick="onBingoFieldClick"
-                android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
                 android:hyphenationFrequency="full"
                 app:coordX="0"
@@ -417,7 +397,6 @@
                 android:clickable="true"
                 android:gravity="center"
                 android:onClick="onBingoFieldClick"
-                android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
                 android:hyphenationFrequency="full"
                 app:coordX="1"
@@ -433,7 +412,6 @@
                 android:clickable="true"
                 android:gravity="center"
                 android:onClick="onBingoFieldClick"
-                android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
                 android:hyphenationFrequency="full"
                 app:coordX="2"
@@ -449,7 +427,6 @@
                 android:clickable="true"
                 android:gravity="center"
                 android:onClick="onBingoFieldClick"
-                android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
                 android:hyphenationFrequency="full"
                 app:coordX="3"
@@ -465,7 +442,6 @@
                 android:clickable="true"
                 android:gravity="center"
                 android:onClick="onBingoFieldClick"
-                android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
                 android:hyphenationFrequency="full"
                 app:coordX="4"
